--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.top-bar {
+  -webkit-box-shadow: 2px 6px 5px -1px rgba(0,0,0,0.13);
+  -moz-box-shadow: 2px 6px 5px -1px rgba(0,0,0,0.13);
+  box-shadow: 2px 6px 5px -1px rgba(0,0,0,0.13);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 50px;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.menu {
+  display: flex;
+  flex-direction: row;
+  font-weight: bold;
+  justify-content: flex-end;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu-item {
+  padding-right: 25px;
+  cursor: pointer;
+}
+
+.site-title {
+  padding-left: 25px;
 }
