--- a/src/navigation-root/app.css
+++ b/src/navigation-root/app.css
@@ -1,6 +1,4 @@
 .top-bar {
-  -webkit-box-shadow: 2px 6px 5px -1px rgba(0,0,0,0.13);
-  -moz-box-shadow: 2px 6px 5px -1px rgba(0,0,0,0.13);
   box-shadow: 2px 6px 5px -1px rgba(0,0,0,0.13);
   display: flex;
   flex-direction: row;
@@ -24,9 +22,7 @@
   position: absolute;
   justify-content: flex-end;
   width: 250px;
-  -webkit-box-shadow: 2px 6px 15px -1px rgba(0,0,0,0.13);
-  -moz-box-shadow: 2px 6px 15px -1px rgba(0,0,0,0.13);
-  box-shadow: 2px 6px 15px -1px rgba(0,0,0,0.13);
+  box-shadow: 2px 9px 15px -1px rgba(0,0,0,0.13);
 }
 
 .menu-item {
@@ -79,4 +75,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  font-weight: bold;
+  font-size: 18px;
 }
