--- a/src/components/content-card.css
+++ b/src/components/content-card.css
@@ -1,16 +1,4 @@
-.comm-groups {
-    padding-left: 25px;
-    padding-top: 25px;
-    padding-right: 10px;
-}
-
-.title {
-    padding-bottom: 15px;
-    font-weight: bold;
-    color: #318492;
-}
-
-.comm-group {
+.content-card {
     padding-top: 15px;
     padding-bottom: 15px;
     padding-left: 15px;
@@ -19,23 +7,17 @@
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
 }
 
-.comm-group-title {
+.content-card-title {
     padding-bottom: 10px;
     font-weight: bold;
     color: #318492;
 }
 
-.comm-group-content {
+.content-card-content {
     padding-bottom: 5px;
     padding-left: 5px;
-
 }
 
 .feature-name {
     color: #318492;
-}
-
-.whatsapp {
-    position: relative;
-    top: 5px;
 }
