--- a/src/pages/resources/search.css
+++ b/src/pages/resources/search.css
@@ -1,6 +1,6 @@
 .search-box {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     height: 40px;
     font-size: 20px;
     align-items: center;
