apply new style

--- a/src/components/content-card.css
+++ b/src/components/content-card.css
@@ -10,7 +10,7 @@
 .content-card-title {
     padding-bottom: 10px;
     font-weight: bold;
-    color: #318492;
+    color: #93d2ef;
 }
 
 .content-card-content {
@@ -19,5 +19,5 @@
 }
 
 .feature-name {
-    color: #318492;
+    color: #93d2ef;
 }
