--- a/src/pages/resources/resource-page.css
+++ b/src/pages/resources/resource-page.css
@@ -2,8 +2,7 @@
     padding: 25px;
 }
 
-.title {
+.resource-page-title {
     padding-bottom: 15px;
     font-weight: bold;
-    color: #318492;
 }
