--- a/src/pages/resources/search.css
+++ b/src/pages/resources/search.css
@@ -7,10 +7,19 @@
 
 }
 .search-box-item {
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     height: 40px;
+     font-size: 20px;
+     align-items: center;
+ }
+.search-box-item-search {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: right;
     height: 40px;
+    width:100%;
     font-size: 20px;
     align-items: center;
 }
