--- a/src/navigation-root/app.css
+++ b/src/navigation-root/app.css
@@ -1,18 +1,6 @@
-.top-bar {
-  display: flex;
-  flex-direction: row;
-  height: 50px;
-  justify-content: space-between;
-  padding-right: 10px;
-  padding-bottom: 25px;
-}
 
-.menu {
-  display: flex;
-  flex-direction: row;
-  font-weight: bold;
-  justify-content: flex-end;
-}
+
+
 
 .sub-menu {
   display: flex;
@@ -67,13 +55,55 @@
   color: #ffffff;
 }
 
-.site-title {
-  padding-top: 25px;
-  padding-left: 25px;
-  cursor: default;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-weight: bold;
-  font-size: 60px;
+@media (min-width:1025px) {
+  .site-title {
+    padding-top: 25px;
+    padding-left: 25px;
+    cursor: default;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-weight: bold;
+    font-size: 60px;
+  }
+  .top-bar {
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    justify-content: space-between;
+    padding-right: 10px;
+    padding-bottom: 25px;
+  }
+  .menu {
+    display: flex;
+    flex-direction: row;
+    font-weight: bold;
+    justify-content: flex-end;
+  }
+}
+
+@media all and (max-width: 1025px) {
+  .site-title {
+    padding-top: 0px;
+    padding-left: 0px;
+    cursor: default;
+    display: flex;
+    flex-direction: row;
+    align-items: initial;
+    font-weight: bold;
+    font-size: 30px;
+  }
+  .top-bar {
+    display: flex;
+    flex-direction: column;
+    padding-right: 10px;
+    padding-bottom: 25px;
+  }
+  .menu {
+    display: flex;
+    flex-direction: row;
+    font-weight: bold;
+    justify-content: space-between;
+    font-size: 18px;
+  }
 }
