--- a/src/pages/resources/search.css
+++ b/src/pages/resources/search.css
@@ -1,28 +1,55 @@
-.search-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    font-size: 20px;
-    width: 550px;
 
+@media (min-width:1025px) {
+    .search-box-item {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        height: 40px;
+        font-size: 20px;
+        align-items: center;
+    }
+    .search-box-item-search {
+        display: flex;
+        flex-direction: row;
+        justify-content: right;
+        height: 40px;
+        width:100%;
+        font-size: 20px;
+        align-items: center;
+    }
+    .search-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        font-size: 20px;
+        width: 550px;
+
+    }
 }
-.search-box-item {
-     display: flex;
-     flex-direction: row;
-     justify-content: space-between;
-     height: 40px;
-     font-size: 20px;
-     align-items: center;
- }
-.search-box-item-search {
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    height: 40px;
-    width:100%;
-    font-size: 20px;
-    align-items: center;
+
+@media all and (max-width: 1025px) {
+    .search-box-item {
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+    }
+    .search-box-item-search {
+        display: flex;
+        flex-direction: column;
+        width:100%;
+        font-size: 20px;
+
+    }
+    .search-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        font-size: 20px;
+        width: 550px;
+
+    }
 }
+
 select {
     border: 2px #318492 solid;
     width: 300px;
