--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -15,7 +15,7 @@
 
 @media all and (max-width: 1025px) {
     .page {
-        padding-left: 10px;
+        padding: 10px 20px 10px 10px;
     }
 
 
